# SlimDiffy

./: .gitignore  LICENSE  README.md  autodiff.py  pyproject.toml  webasm.py
examples/: train.py
slimdiffy/: autodiff.py  pytree.py
tests/: test_autodiff.py
