[project]
name = "slimdiffy"
version = "0.1.0"
description = "A slim automatic differentiation library"
authors = [{name = "Jake Ehrlich"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
